--- a/views/restaurant-details.ejs
+++ b/views/restaurant-details.ejs
@@ -2,24 +2,17 @@
 <html lang="en">
   <head>
     <%- include('includes/head') %>
-    <link rel="stylesheet" href="styles/restaurants.css"/>
+    <link rel="stylesheet" href="/styles/restaurants.css"/>
   </head>
   <body>
     <%- include('includes/header') %>
     <%- include('includes/side-drawer') %>
     <main>
-      <h1>Recommended restaurants</h1>
-      <% if (numberOfRestaurants === 0) { %>
-        <p>We have no restaurants yet!</p>
-      <% } else { %>
-        <p>Find your next favorite restaurants with help of our other users!</p>
-        <p>We found <%= numberOfRestaurants %> restaurants.</p>
-        <ul id="restaurants-list">
-          <% for (const restaurant of restaurants) { %>
-            <%- include('includes/restaurants/restaurant-item', {restaurant: restaurant}) %>
-          <% } %>
-        </ul>
-      <% } %>  
+      <!-- rid 는 url에서 입력된 동적 경로 매개변수 -->
+      <h1>TITLE OF THE RESTAURANT <%= rid %></h1>
+      <P>Cuisine | Address</P>
+      <p>Description of the restaurant</p>
+      <p><a href="">View Website</a></p>
     </main>
   </body>
 </html>
