refactoring restaurant-data

--- a/views/restaurants.ejs
+++ b/views/restaurants.ejs
@@ -17,11 +17,11 @@
         <ul id="restaurants-list">
           <% for (const restaurant of restaurants) { %>
             <%- include('includes/restaurants/restaurant-item', {restaurant: restaurant}) %>
-            // 여기 있던 동적 내용을 include 파일로 연결시키려면, 
-            // 해당 파일로 동적 데이터를 생성하기 위한 키를 전달해줘야 한다.
-            // 그것이 {restaurant: restaurant} 인데,
-            // 첫번째는 include 파일에서 동적데이터 생성에 사용하고 있는 키의 이름
-            // 두번째는 const restaurant 에서 정의한 상수를 말하는 것
+            <!-- 여기 있던 동적 내용을 include 파일로 연결시키려면, 
+             해당 파일로 동적 데이터를 생성하기 위한 키를 전달해줘야 한다.
+             그것이 {restaurant: restaurant} 인데,
+             첫번째는 include 파일에서 동적데이터 생성에 사용하고 있는 키의 이름
+             두번째는 const restaurant 에서 정의한 상수를 말하는 것 -->
           <% } %>
         </ul>
       <% } %>  
